<resources>
    <string name="app_name">Radiate</string>
    <string name="nav_fav">Favorite</string>
    <string name="nav_popular">Popular</string>
    <string name="nav_countries">Countries</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="randomStation">Random Station</string>
    <string name="PlayingRadio">Playing Radio</string>
    <string name="searchText">Search</string>
    <string name="openSideNav">Side Nav Open</string>
    <string name="closeSideNav">Side Nav Close</string>
    <string name="selectComponent">Select Component</string>
    <string name="byName">Station Names</string>
    <string name="ByCountry">Countries</string>
    <string name="ByLanguage">Languages</string>
    <string name="ByTag">Tags</string>
    <string name="Name">Name</string>
    <string name="Language">Language</string>
    <string name="Country">Country</string>
    <string name="hintTags">news, slow, talk...</string>
    <string name="ExampleRadioName">BBC Radio</string>
    <string name="Byclickcount">Click Count</string>
    <string name="ByclickTrend">Click Trend</string>
    <string name="searchQuestion">Search Result Limit</string>
    <string name="orderByWhat">Order search result by</string>
    <string name="ShouldDownloadImages">Fetch station icons from the Internet</string>
    <string name="notif1Title">"Listen Popular Radio Stations"</string>
    <string name="notif1Body">"Turn up the volume. Close your eyes and let the radio take over your soul!"</string>
    <string name="notif2Title">"Discover Radio Stations From Other Countries"</string>
    <string name="notif2Body">"A different language is a different vision of life \n -Federigo Fellini"</string>
</resources>
