<menu
    xmlns:android= "http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    xmlns:tools ="http://schemas.android.com/tools"
    tools:context=".Activities.MainActivity">
    <item
        android:id ="@+id/action_settings"
        android:orderInCategory="101"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title ="@string/action_settings"
        app:showAsAction="never">
    </item>
    <item
        android:id ="@+id/goToPlaying"
        android:orderInCategory="102"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        android:title ="@string/PlayingRadio"
        app:showAsAction="never">
    </item>
    <item
        android:id ="@+id/randomStation"
        android:orderInCategory="103"
        android:icon="@drawable/ic_casino_black_24dp"
        android:title ="@string/randomStation"
        app:showAsAction="always">
    </item>
    <item
        android:id ="@+id/not1"
        android:orderInCategory="104"
        android:title ="Notification 1"
        app:showAsAction="never">
    </item>

    <item
        android:id ="@+id/not2"
        android:orderInCategory="104"
        android:title ="Notification 2"
        app:showAsAction="never">
    </item>
</menu>
