<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.MainActivity"
    android:id="@+id/drawerLayout">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            app:layout_constraintBottom_toTopOf="@+id/main_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>/>
        <android.support.design.widget.BottomNavigationView
            android:id="@+id/main_nav"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:itemIconTint="@color/nav_item_color"
            app:itemTextColor="@color/nav_item_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_frame"
            app:menu="@menu/nav_items">

        </android.support.design.widget.BottomNavigationView>

        <FrameLayout
            android:id="@+id/main_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toBottomOf="@id/main_nav"
            app:layout_constraintEnd_toStartOf="@id/main_nav"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

    </android.support.constraint.ConstraintLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.NavigationView
                    android:id="@+id/navigation_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_margin="0dp"
                    android:padding="0dp"
                    app:elevation="0dp"
                    app:itemBackground="@color/nav_background"
                    >

                </android.support.design.widget.NavigationView>
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/Name"
                        android:textAlignment="viewStart"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/SearchNameValue"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/ExampleRadioName"
                        android:singleLine="true"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView8"
                        app:layout_constraintTop_toTopOf="parent"
                        app:queryBackground="@color/FullTransparent"></EditText>

                </android.support.constraint.ConstraintLayout>
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/Country"
                            android:textAlignment="viewStart"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/countrySpinner"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Spinner
                            android:id="@+id/countrySpinner"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textView5"
                            app:layout_constraintTop_toTopOf="parent">
                        </Spinner>
                    </android.support.constraint.ConstraintLayout>
                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/Language"
                            android:textAlignment="viewStart"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/LanguageSpinner"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                        <Spinner
                            android:id="@+id/LanguageSpinner"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textView6"
                            app:layout_constraintTop_toTopOf="parent">
                        </Spinner>
                    </android.support.constraint.ConstraintLayout>
                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/ByTag"
                            android:textAlignment="viewStart"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/tagValue"
                            style="@style/Widget.AppCompat.EditText"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="8dp"
                            android:hint="@string/hintTags"
                            android:singleLine="true"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textView7"
                            app:layout_constraintTop_toTopOf="parent"
                            app:queryBackground="@color/FullTransparent"></EditText>

                    </android.support.constraint.ConstraintLayout>
                    <Button
                        android:id="@+id/SearchButtonNav"
                        style="@android:style/Widget.Material.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:text="@string/searchText"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        tools:text="@string/searchText" />
                </LinearLayout>

                <ListView
                    android:id="@+id/categoriesListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>